2014-04-20  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event->org-entry)
	(gnus-icalendar--update-org-event): put event timestamp in
	the org entry body instead of the drawer
	(gnus-icalendar-event--get-attendee-names): list of participants should
	contain even attendees without common name attribute

2014-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-format-time-string): New function.

	* message.el (message-insert-formatted-citation-line): Use the original
	author's time zone to express a date string.

2014-04-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-srvr.el (gnus-tmp-how, gnus-tmp-name, gnus-tmp-where)
	(gnus-tmp-status, gnus-tmp-agent, gnus-tmp-cloud)
	(gnus-tmp-news-server, gnus-tmp-news-method, gnus-tmp-user-defined):
	Silence compiler warnings.
	(gnus-server-insert-server-line): Don't use dyn-bind var as argument.

2014-03-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el: Require url when compiling.

	* gnus-cloud.el (gnus-cloud-parse-version-1):
	Use plist-get rather than CL's getf.
	(gnus-activate-group, gnus-subscribe-group): Declare.

	* gnus-sum.el (gnus-mime-buttonize-attachments-in-header): Declare.

2014-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-toggle-header): Display header attachment
	buttons when toggling the header off.

2014-03-14  Juanma Barranquero  <lekktu@gmail.com>

	* tls.el (tls-program): Reflow docstring.

2014-03-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-accept-article): Make respooling to nnimap
	groups work again.

2014-03-07  George McNinch  <gmcninch@gmail.com>  (tiny change)

	* nnir.el (nnir-run-namazu): Parse namazu results that are larger than
	999 correctly (i.e. "1,342").

2014-03-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-agent.el (gnus-agent-update-files-total-fetched-for): Don't bug
	out if the directory doesn't exist.

2014-03-07  Daiki Ueno  <ueno@gnu.org>
